<?xml version="1.0"?>
<package format="2">
  <name>testCall</name>
  <version>0.0.0</version>
  <description>The testCall package</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <depend>testLib</depend>

</package>
